Initial commit or update

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header> 
 
     <span><b>UDEMY</b></span>
+    <select>
+      <option></option>
+    </select>
     <input type="text" placeholder="Search About Courses">
     <button>Log in</button>
     <button>Register</button>
@@ -113,6 +116,51 @@
         <li><a href="#">Business Analysis</a></li>
       </ul>
     </div>
+
+    <div>
+      <h3>About</h3>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Career</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Investors</a></li>
+      </ul>
+    </div>
+
+    <diV>
+      <h3>Discover Udemy</h3>
+      <ul>
+        <li><a href="#">Get App</a></li>
+        <li><a href="#">Teach On Udemy</a></li>
+        <li><a href="#">Plans And Pricing</a></li>
+        <li><a href="#">Afilliate</a></li>
+        <li><a href="#">Help and Support</a></li>
+      </ul>
+    </diV>
+
+    <diV>
+      <h3>Udemy For Business</h3>
+      <ul>
+        <li><a href="#">Udemy Business</a></li>
+      </ul>
+    </diV>
+
+    <diV>
+      <h3>Legal & Accessibility</h3>
+      <ul>
+        <li><a href="#">Accessibility statement</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Sitemap</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </diV>
+
+    <div>
+
+    </div>
+
+
 
     </footer>
 </body>
