Initial commit or update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <header> 
 
-    <span><b>UDEMY</b></span>
+    <span><b>Udemy</b></span>
     <input type="text" placeholder="Search About Courses">
     <button>Log in</button>
     <button>Register</button>
@@ -154,7 +154,9 @@
     </diV>
 
     <div>
-
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <a href="#">Cookie settings</a>
+      <span>English</span>
     </div>
 
 
