Initial commit or update

--- a/Signup.html
+++ b/Signup.html
@@ -26,6 +26,7 @@
         <br>
         <input type="checkbox" id="A">
         <label for="A">Send me special offers , personalized recommendations and learning tips.</label>
+        <br>
         <button> &#x1F4E7 Continue with Email </button>
         </div>
 
@@ -144,7 +145,7 @@
         </ul>
         </div>
 
-        <div>
+        <div class="footer-column">
         <h3>About</h3>
         <ul>
             <li><a href="#">About Us</a></li>
@@ -155,7 +156,7 @@
         </ul>
         </div>
 
-        <diV>
+        <diV class="footer-column">
         <h3>Discover Udemy</h3>
         <ul>
             <li><a href="#">Get App</a></li>
@@ -166,14 +167,14 @@
         </ul>
         </diV>
 
-        <diV>
+        <diV class="footer-column">
         <h3>Udemy For Business</h3>
         <ul>
             <li><a href="#">Udemy Business</a></li>
         </ul>
         </diV>
 
-        <diV>
+        <diV class="footer-column">
         <h3>Legal & Accessibility</h3>
         <ul>
             <li><a href="#">Accessibility statement</a></li>
@@ -183,7 +184,7 @@
         </ul>
         </diV>
 
-        <div>
+        <div class="footer-column">
         <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
         <a href="#">Cookie settings</a>
         <span>English</span>
