--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Online Course - Learn Anything , Anywhere</title>
+    <title>Free Online Course - Learn Anything</title>
 </head>
 <body>
 
