Initial commit or update

--- a/login.html
+++ b/login.html
@@ -11,9 +11,13 @@
     <header> 
     <span><b>Udemy</b></span>
     <input type="text" placeholder="Search About Courses">
-    <button>Log in</button>
-    <button>Register</button>
+    <button><a href="courses.html">Explore Courses</a></button>
+    <button><a href="login.html">Log in</a></button>
+    <button><a href="Signup.html">Register</a></button>
+    <button><a href="index.html">Homepage</a></button>
+  
     </header>
+     <hr/>
 
     <div>
         <h2><b>Log in to continue your learning journey</b></h2>
@@ -35,146 +39,54 @@
         <span><a href="#">Log with Your Organization</a></span>
     </div>
 <section>
+     <hr/>
 
         <footer>
-            <h2>Explore Top Skill and Certifications</h2>
+  <h2>Explore Top Courses for CS Students</h2>
 
-            <div class="footer-column">
-        <h3>In-demand Careers</h3>
-        <ul>
-            <li><a href="#">Data Scientist</a></li>
-            <li><a href="#">Full Stack Web Developer</a></li>
-            <li><a href="#">Cloud Engineer</a></li>
-            <li><a href="#">Project Manager</a></li>
-            <li><a href="#">Game Developer</a></li>
-            <li><a href="#">See all Career Accelerators</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Web & Programming</h3>
+    <ul>
+      <li><a href="#">HTML & CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li><a href="#">Python Programming</a></li>
+      <li><a href="#">Java Programming</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>Web Development</h3>
-        <ul>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">JavaScript</a></li>
-            <li><a href="#">React JS</a></li>
-            <li><a href="#">Angular</a></li>
-            <li><a href="#">Java</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Data & AI</h3>
+    <ul>
+      <li><a href="#">Data Structures & Algorithms</a></li>
+      <li><a href="#">Machine Learning</a></li>
+      <li><a href="#">Data Science</a></li>
+      <li><a href="#">SQL & Databases</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>IT Certifications</h3>
-        <ul>
-            <li><a href="#">Amazon AWS</a></li>
-            <li><a href="#">AWS Certified Cloud Practitioner</a></li>
-            <li><a href="#">AZ-900: Microsoft Azure Fundamentals</a></li>
-            <li><a href="#">AWS Certified Solutions Architect</a></li>
-            <li><a href="#">Kubernetes</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Cloud & DevOps</h3>
+    <ul>
+      <li><a href="#">AWS Basics</a></li>
+      <li><a href="#">Docker & Containers</a></li>
+      <li><a href="#">Linux Essentials</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>Leadership</h3>
-        <ul>
-            <li><a href="#">Leadership</a></li>
-            <li><a href="#">Management Skills</a></li>
-            <li><a href="#">Project Management</a></li>
-            <li><a href="#">Personal Productivity</a></li>
-            <li><a href="#">Emotional Intelligence</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Other Useful Skills</h3>
+    <ul>
+      <li><a href="#">Git & GitHub</a></li>
+      <li><a href="#">Problem Solving</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>Certifications by Skill</h3>
-        <ul>
-            <li><a href="#">Cybersecurity Certification</a></li>
-            <li><a href="#">Project Management Certification</a></li>
-            <li><a href="#">Cloud Certification</a></li>
-            <li><a href="#">Data Analytics Certification</a></li>
-            <li><a href="#">HR Management Certification</a></li>
-            <li><a href="#">See all Certifications</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+    <span>English</span>
+  </div>
+</footer>
 
-        <div class="footer-column">
-        <h3>Data Science</h3>
-        <ul>
-            <li><a href="#">Data Science</a></li>
-            <li><a href="#">Python</a></li>
-            <li><a href="#">Machine Learning</a></li>
-            <li><a href="#">ChatGPT</a></li>
-            <li><a href="#">Deep Learning</a></li>
-        </ul>
-        </div>
-
-        <div class="footer-column">
-        <h3>Communication</h3>
-        <ul>
-            <li><a href="#">Communication Skills</a></li>
-            <li><a href="#">Presentation Skills</a></li>
-            <li><a href="#">Public Speaking</a></li>
-            <li><a href="#">Writing</a></li>
-            <li><a href="#">PowerPoint</a></li>
-        </ul>
-        </div>
-
-        <div class="footer-column">
-        <h3>Business Analytics & Intelligence</h3>
-        <ul>
-            <li><a href="#">Microsoft Excel</a></li>
-            <li><a href="#">SQL</a></li>
-            <li><a href="#">Microsoft Power BI</a></li>
-            <li><a href="#">Data Analysis</a></li>
-            <li><a href="#">Business Analysis</a></li>
-        </ul>
-        </div>
-
-        <div class="footer-column">
-        <h3>About</h3>
-        <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Investors</a></li>
-        </ul>
-        </div>
-
-        <diV class="footer-column">
-        <h3>Discover Udemy</h3>
-        <ul>
-            <li><a href="#">Get App</a></li>
-            <li><a href="#">Teach On Udemy</a></li>
-            <li><a href="#">Plans And Pricing</a></li>
-            <li><a href="#">Afilliate</a></li>
-            <li><a href="#">Help and Support</a></li>
-        </ul>
-        </diV>
-
-        <diV class="footer-column">
-        <h3>Udemy For Business</h3>
-        <ul>
-            <li><a href="#">Udemy Business</a></li>
-        </ul>
-        </diV>
-
-        <diV class="footer-column">
-        <h3>Legal & Accessibility</h3>
-        <ul>
-            <li><a href="#">Accessibility statement</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Sitemap</a></li>
-            <li><a href="#">Terms</a></li>
-        </ul>
-        </diV>
-
-        <div class="footer-column">
-        <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-        <a href="#">Cookie settings</a>
-        <span>English</span>
-        </div>
-
-        </footer>
     </section>
 </body>
 </html>
