--- a/index.html
+++ b/index.html
@@ -1,167 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Online Course - Learn Anything</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Free Online Course - Learn Anything</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-    <header> 
+<header>
+  <span><b>Udemy</b></span>
+  <input type="text" placeholder="Search About Courses">
+  <button><a href="courses.html">Explore Courses</a></button>
+  <button><a href="login.html">Log in</a></button>
+  <button><a href="Signup.html">Register</a></button>
+</header>
+<hr/>
 
-    <span><b>Udemy</b></span>
-    <input type="text" placeholder="Search About Courses">
-    <button>Log in</button>
-    <button>Register</button>
+<div>
+  <h2>Featured Free Courses</h2>
+  <div class="course-grid">
+  <div class="course-card">
+    <a href="#">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" alt="HTML & CSS" width="200">
+      <h3>HTML & CSS</h3>
+    </a>
+    <p>Design responsive, modern web pages.</p>
+  </div>
 
-    </header>
+  <div class="course-card">
+    <a href="#">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" alt="Python Programming" width="200">
+      <h3>Python Programming</h3>
+    </a>
+    <p>Versatile language great for web, AI, and scripting.</p>
+  </div>
 
-    <div>
-        <!-- BODY FOR COURSE SUGGESTION AND DISPLAY-->
-    </div>
+  <div class="course-card">
+    <a href="#">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
+      <h3>Data Structures & Algorithms</h3>
+    </a>
+    <p>Build strong CS fundamentals & prepare for interviews.</p>
+  </div>
+
+  <div class="course-card">
+    <a href="#">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
+      <h3>SQL & Databases</h3>
+    </a>
+    <p>Query, store, and manage data effectively.</p>
+  </div>
+
+  <div class="course-card">
+    <a href="#">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" alt="Git & GitHub" width="200">
+      <h3>Git & GitHub</h3>
+    </a>
+    <p>Version control and collaboration in projects.</p>
+  </div>
+</div>
 
 
-    <section>
+</div>
 
-        <footer>
-            <h2>Explore Top Skill and Certifications</h2>
+<hr/>
+<section>
+  <footer>
+  <h2>Explore Top Courses for CS Students</h2>
 
-            <div class="footer-column">
-        <h3>In-demand Careers</h3>
-        <ul>
-            <li><a href="#">Data Scientist</a></li>
-            <li><a href="#">Full Stack Web Developer</a></li>
-            <li><a href="#">Cloud Engineer</a></li>
-            <li><a href="#">Project Manager</a></li>
-            <li><a href="#">Game Developer</a></li>
-            <li><a href="#">See all Career Accelerators</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Web & Programming</h3>
+    <ul>
+      <li><a href="#">HTML & CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li><a href="#">Python Programming</a></li>
+      <li><a href="#">Java Programming</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>Web Development</h3>
-        <ul>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">JavaScript</a></li>
-            <li><a href="#">React JS</a></li>
-            <li><a href="#">Angular</a></li>
-            <li><a href="#">Java</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Data & AI</h3>
+    <ul>
+      <li><a href="#">Data Structures & Algorithms</a></li>
+      <li><a href="#">Machine Learning</a></li>
+      <li><a href="#">Data Science</a></li>
+      <li><a href="#">SQL & Databases</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>IT Certifications</h3>
-        <ul>
-            <li><a href="#">Amazon AWS</a></li>
-            <li><a href="#">AWS Certified Cloud Practitioner</a></li>
-            <li><a href="#">AZ-900: Microsoft Azure Fundamentals</a></li>
-            <li><a href="#">AWS Certified Solutions Architect</a></li>
-            <li><a href="#">Kubernetes</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Cloud & DevOps</h3>
+    <ul>
+      <li><a href="#">AWS Basics</a></li>
+      <li><a href="#">Docker & Containers</a></li>
+      <li><a href="#">Linux Essentials</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>Leadership</h3>
-        <ul>
-            <li><a href="#">Leadership</a></li>
-            <li><a href="#">Management Skills</a></li>
-            <li><a href="#">Project Management</a></li>
-            <li><a href="#">Personal Productivity</a></li>
-            <li><a href="#">Emotional Intelligence</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <h3>Other Useful Skills</h3>
+    <ul>
+      <li><a href="#">Git & GitHub</a></li>
+      <li><a href="#">Problem Solving</a></li>
+    </ul>
+  </div>
 
-        <div class="footer-column">
-        <h3>Certifications by Skill</h3>
-        <ul>
-            <li><a href="#">Cybersecurity Certification</a></li>
-            <li><a href="#">Project Management Certification</a></li>
-            <li><a href="#">Cloud Certification</a></li>
-            <li><a href="#">Data Analytics Certification</a></li>
-            <li><a href="#">HR Management Certification</a></li>
-            <li><a href="#">See all Certifications</a></li>
-        </ul>
-        </div>
+  <div class="footer-column">
+    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+    <span>English</span>
+  </div>
+</footer>
 
-        <div class="footer-column">
-        <h3>Data Science</h3>
-        <ul>
-            <li><a href="#">Data Science</a></li>
-            <li><a href="#">Python</a></li>
-            <li><a href="#">Machine Learning</a></li>
-            <li><a href="#">ChatGPT</a></li>
-            <li><a href="#">Deep Learning</a></li>
-        </ul>
-        </div>
+</section>
 
-        <div class="footer-column">
-        <h3>Communication</h3>
-        <ul>
-            <li><a href="#">Communication Skills</a></li>
-            <li><a href="#">Presentation Skills</a></li>
-            <li><a href="#">Public Speaking</a></li>
-            <li><a href="#">Writing</a></li>
-            <li><a href="#">PowerPoint</a></li>
-        </ul>
-        </div>
-
-        <div class="footer-column">
-        <h3>Business Analytics & Intelligence</h3>
-        <ul>
-            <li><a href="#">Microsoft Excel</a></li>
-            <li><a href="#">SQL</a></li>
-            <li><a href="#">Microsoft Power BI</a></li>
-            <li><a href="#">Data Analysis</a></li>
-            <li><a href="#">Business Analysis</a></li>
-        </ul>
-        </div>
-
-        <div class="footer-column">
-        <h3>About</h3>
-        <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Investors</a></li>
-        </ul>
-        </div>
-
-        <diV class="footer-column">
-        <h3>Discover Udemy</h3>
-        <ul>
-            <li><a href="#">Get App</a></li>
-            <li><a href="#">Teach On Udemy</a></li>
-            <li><a href="#">Plans And Pricing</a></li>
-            <li><a href="#">Afilliate</a></li>
-            <li><a href="#">Help and Support</a></li>
-        </ul>
-        </diV>
-
-        <diV class="footer-column">
-        <h3>Udemy For Business</h3>
-        <ul>
-            <li><a href="#">Udemy Business</a></li>
-        </ul>
-        </diV>
-
-        <diV class="footer-column">
-        <h3>Legal & Accessibility</h3>
-        <ul>
-            <li><a href="#">Accessibility statement</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Sitemap</a></li>
-            <li><a href="#">Terms</a></li>
-        </ul>
-        </diV>
-
-        <div class="footer-column">
-        <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-        <a href="#">Cookie settings</a>
-        <span>English</span>
-        </div>
-
-        </footer>
-    </section>
 </body>
 </html>
