Initial commit or update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <hr/>
 <section>
-  <footer>
+<footer>
   <h2>Explore Top Courses for CS Students</h2>
 
   <div class="footer-column">
@@ -107,11 +107,17 @@
   </div>
 
   <div class="footer-column">
+    <h3>Company</h3>
+    <ul>
+      <li><a href="AboutUs.html">About Us</a></li>
+    </ul>
+  </div>
+
+  <div class="footer-column">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
 </footer>
-
 </section>
 
 </body>
