--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Log in to continue your learning</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - Udemy</title>
 </head>
 <body>
-    
-    <header> 
-    <span><b>Udemy</b></span>
-    <input type="text" placeholder="Search About Courses">
-    <button><a href="courses.html">Explore Courses</a></button>
-    <button><a href="login.html">Log in</a></button>
-    <button><a href="Signup.html">Register</a></button>
-    <button><a href="index.html">Homepage</a></button>
-  
-    </header>
-     <hr/>
 
-    <div>
-        <h2><b>Log in to continue your learning journey</b></h2>
-        <input type="text" placeholder="Email">
-        <br>
-        <button> &#x1F4E7 Continue with Email </button>
-        <p>--------Other Log in options--------</p>
+<!-- Header -->
+<header>
+  <span><b>Udemy</b></span>
+  <input type="text" placeholder="Search About Courses">
+  <button><a href="login.html">Log in</a></button>
+  <button><a href="Signup.html">Register</a></button>
+  <button><a href="index.html">Homepage</a></button>
 
-        <span>
-            <button><i class="fa-brands fa-google"></i></button>
-            <button><i class="fa-brands fa-facebook"></i></button>
-            <button><i class="fa-brands fa-apple"></i></button>
-        </span>
+</header>
+<hr/>
 
-        <br>
-
-        <span>Don't have an account? <a href="#">Sign Up</a></span>
-        <br>
-        <span><a href="#">Log with Your Organization</a></span>
-    </div>
+<!-- Body -->
 <section>
-     <hr/>
+  <h2 style="text-align:center;">About Us</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify; font-size:1.1em;">
+    Welcome to Udemy – your platform to learn anything, anywhere, anytime! <br><br>
+    We believe education has the power to transform lives. That’s why we offer a range of carefully curated free online courses designed especially for Computer Science students and tech enthusiasts. 
+    Whether you want to build your first website, dive into programming languages, master data structures, or explore cloud technologies, our goal is to help you unlock your potential and stay ahead in this fast-changing digital world.
+    <br><br>
+    Our mission is simple: make high-quality, industry-relevant education accessible to everyone.
+    Join thousands of learners on Udemy and start your journey today!
+  </p>
+</section>
 
-    <section>
+<!-- Footer -->
+<hr/>
+<section>
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -95,5 +87,7 @@
   </div>
 </footer>
 </section>
+
+
 </body>
 </html>
