--- a/Signup.html
+++ b/Signup.html
@@ -56,8 +56,7 @@
      <hr/>
 
     <section>
-
-       <footer>
+<footer>
   <h2>Explore Top Courses for CS Students</h2>
 
   <div class="footer-column">
@@ -98,12 +97,18 @@
   </div>
 
   <div class="footer-column">
+    <h3>Company</h3>
+    <ul>
+      <li><a href="AboutUs.html">About Us</a></li>
+    </ul>
+  </div>
+
+  <div class="footer-column">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
 </footer>
-
-    </section>
+</section>
 
 </body>
 </html>
