--- a/courses.html
+++ b/courses.html
@@ -22,13 +22,13 @@
   <div class="course-grid">
 
    
-    <div class="course-card">
+    <span class="course-card">
       <a href="#">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" width="200" alt="HTML & CSS">
         <h3>HTML & CSS</h3>
       </a>
       <p>Design responsive, modern websites.</p>
-    </div>
+    </span>
 
     <div class="course-card">
       <a href="#">
@@ -170,6 +170,13 @@
     <ul>
       <li><a href="#">Git & GitHub</a></li>
       <li><a href="#">Problem Solving</a></li>
+    </ul>
+  </div>
+
+  <div class="footer-column">
+    <h3>Company</h3>
+    <ul>
+      <li><a href="AboutUs.html">About Us</a></li>
     </ul>
   </div>
 
