Initial commit or update

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,6 +33,7 @@
 
 <!-- Footer -->
 <hr/>
+
 <section>
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
@@ -78,6 +79,7 @@
     <h3>Company</h3>
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
+      <li><a href="ContactUs.html">Contact Us</a></li>
     </ul>
   </div>
 
