--- a/index.html
+++ b/index.html
@@ -19,49 +19,48 @@
 
 <div>
   <h2>Featured Free Courses</h2>
-  <div class="course-grid">
-  <div class="course-card">
-    <a href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" alt="HTML & CSS" width="200">
-      <h3>HTML & CSS</h3>
-    </a>
-    <p>Design responsive, modern web pages.</p>
-  </div>
-
-  <div class="course-card">
-    <a href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" alt="Python Programming" width="200">
-      <h3>Python Programming</h3>
-    </a>
-    <p>Versatile language great for web, AI, and scripting.</p>
-  </div>
-
-  <div class="course-card">
-    <a href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
-      <h3>Data Structures & Algorithms</h3>
-    </a>
-    <p>Build strong CS fundamentals & prepare for interviews.</p>
-  </div>
-
-  <div class="course-card">
-    <a href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
-      <h3>SQL & Databases</h3>
-    </a>
-    <p>Query, store, and manage data effectively.</p>
-  </div>
-
-  <div class="course-card">
-    <a href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" alt="Git & GitHub" width="200">
-      <h3>Git & GitHub</h3>
-    </a>
-    <p>Version control and collaboration in projects.</p>
-  </div>
-</div>
-
-
+  <table>
+    <tr>
+      <td>
+        <a href="#">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" alt="HTML & CSS" width="200">
+          <h3>HTML & CSS</h3>
+        </a>
+        <p>Design responsive, modern web pages.</p>
+      </td>
+      <td>
+        <a href="#">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" alt="Python Programming" width="200">
+          <h3>Python Programming</h3>
+        </a>
+        <p>Versatile language great for web, AI, and scripting.</p>
+      </td>
+      <td>
+        <a href="#">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
+          <h3>Data Structures & Algorithms</h3>
+        </a>
+        <p>Build strong CS fundamentals & prepare for interviews.</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <a href="#">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="SQL & Databases" width="200">
+          <h3>SQL & Databases</h3>
+        </a>
+        <p>Query, store, and manage data effectively.</p>
+      </td>
+      <td>
+        <a href="#">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" alt="Git & GitHub" width="200">
+          <h3>Git & GitHub</h3>
+        </a>
+        <p>Version control and collaboration in projects.</p>
+      </td>
+      <td></td>
+    </tr>
+  </table>
 </div>
 
 <hr/>
@@ -72,37 +71,37 @@
   <div class="footer-column">
     <h3>Web & Programming</h3>
     <ul>
-      <li><a href="#">HTML & CSS</a></li>
-      <li><a href="#">JavaScript</a></li>
-      <li><a href="#">Python Programming</a></li>
-      <li><a href="#">Java Programming</a></li>
+      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+      <li><a href="JavaScript.html">JavaScript</a></li>
+      <li><a href="java.html">Python Programming</a></li>
+      <li><a href="java.html">Java Programming</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Data & AI</h3>
     <ul>
-      <li><a href="#">Data Structures & Algorithms</a></li>
-      <li><a href="#">Machine Learning</a></li>
-      <li><a href="#">Data Science</a></li>
-      <li><a href="#">SQL & Databases</a></li>
+      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+      <li><a href="ML.html">Machine Learning</a></li>
+      <li><a href="DataScience.html">Data Science</a></li>
+      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Cloud & DevOps</h3>
     <ul>
-      <li><a href="#">AWS Basics</a></li>
-      <li><a href="#">Docker & Containers</a></li>
-      <li><a href="#">Linux Essentials</a></li>
+      <li><a href="AWSBasics.html">AWS Basics</a></li>
+      <li><a href="DockerContainers.html">Docker & Containers</a></li>
+      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Other Useful Skills</h3>
     <ul>
-      <li><a href="#">Git & GitHub</a></li>
-      <li><a href="#">Problem Solving</a></li>
+      <li><a href="GitGitHub.html">Git & GitHub</a></li>
+      <li><a href="ProblemSolving.html">Problem Solving</a></li>
     </ul>
   </div>
 
@@ -110,6 +109,7 @@
     <h3>Company</h3>
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
+      <li><a href="ContactUs.html">Contact Us</a></li>
     </ul>
   </div>
 
