--- a/courses.html
+++ b/courses.html
@@ -3,137 +3,138 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Courses</title>
+  <title>Top Free CS Courses - Udemy Clone</title>
+  <meta name="description" content="Discover top free online courses for computer science students: HTML, CSS, Python, Java, AI, cloud, and more!">
+  <link rel="stylesheet" href="i.CSS">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-<header> 
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
-  <button><a href="index.html">Homepage</a></button>
+<header>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input type="text" placeholder="Search About Courses">
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+      <a href="index.html">Homepage</a>
+    </nav>
+  </div>
 </header>
+
 <hr/>
 
+<nav class="breadcrumb">
+  <a href="index.html">Home</a> &gt; <span>Courses</span>
+</nav>
 
-<section>
-  <h2 style="text-align:center;">Top Courses for CS Students</h2>
-  <div class="course-grid">
-
-   
-    <span class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" width="200" alt="HTML & CSS">
-        <h3>HTML & CSS</h3>
-      </a>
-      <p>Design responsive, modern websites.</p>
-    </span>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/320px-JavaScript-logo.png" width="200" alt="JavaScript">
-        <h3>JavaScript</h3>
-      </a>
-      <p>Make your websites interactive.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" width="200" alt="Python Programming">
-        <h3>Python Programming</h3>
-      </a>
-      <p>Popular language for web, AI & more.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg" width="200" alt="Java Programming">
-        <h3>Java Programming</h3>
-      </a>
-      <p>Build apps & enterprise solutions.</p>
-    </div>
-
-   
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Data_Structure_Example.svg/320px-Data_Structure_Example.svg.png" width="200" alt="Data Structures & Algorithms">
-        <h3>Data Structures & Algorithms</h3>
-      </a>
-      <p>Essential for coding interviews & logic building.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Machine_learning.svg/320px-Machine_learning.svg.png" width="200" alt="Machine Learning">
-        <h3>Machine Learning</h3>
-      </a>
-      <p>Build AI models and predictive systems.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Data_Science_Icon.png/320px-Data_Science_Icon.png" width="200" alt="Data Science">
-        <h3>Data Science</h3>
-      </a>
-      <p>Analyze data and discover insights.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Sql_data_base_with_logo.png/320px-Sql_data_base_with_logo.png" width="200" alt="SQL & Databases">
-        <h3>SQL & Databases</h3>
-      </a>
-      <p>Manage and query data efficiently.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/320px-Amazon_Web_Services_Logo.svg.png" width="200" alt="AWS Basics">
-        <h3>AWS Basics</h3>
-      </a>
-      <p>Introduction to Amazon's cloud platform.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Docker_%28container_engine%29_logo.svg/320px-Docker_%28container_engine%29_logo.svg.png" width="200" alt="Docker & Containers">
-        <h3>Docker & Containers</h3>
-      </a>
-      <p>Package and deploy applications easily.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/320px-Tux.svg.png" width="200" alt="Linux Essentials">
-        <h3>Linux Essentials</h3>
-      </a>
-      <p>Basics of using and working in Linux.</p>
-    </div>
-
-   
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" width="200" alt="Git & GitHub">
-        <h3>Git & GitHub</h3>
-      </a>
-      <p>Version control and collaboration.</p>
-    </div>
-
-    <div class="course-card">
-      <a href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Chess_piece_-_Knight.JPG/320px-Chess_piece_-_Knight.JPG" width="200" alt="Problem Solving">
-        <h3>Problem Solving</h3>
-      </a>
-      <p>Sharpen logic and coding skills.</p>
-    </div>
-  </div>
+<section class="hero">
+  <h1>Top Free & Popular CS Courses</h1>
+  <p>Start learning essential skills in web, AI, data, and more.</p>
 </section>
 
-<!-- Footer -->
-<hr/>
+
 <section>
-<footer>
+  <h2>Explore Courses</h2>
+  <p style="text-align: center; max-width: 600px; margin: 0 auto 20px;">
+    Discover the best courses to boost your skills in programming, data science, AI, and more — all for free!
+  </p>
+
+  <table align="center" cellpadding="10" class="featured-courses">
+    <tr>
+      <td align="center">
+        <a href="HTMLandCSS.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" width="120" alt="HTML & CSS"></a>
+        <div>HTML & CSS<br><small>Design responsive, modern websites.</small></div>
+      </td>
+      <td align="center">
+        <a href="JavaScript.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/320px-JavaScript-logo.png" width="120" alt="JavaScript"></a>
+        <div>JavaScript<br><small>Make your websites interactive.</small></div>
+      </td>
+      <td align="center">
+        <a href="Python.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" width="120" alt="Python"></a>
+        <div>Python Programming<br><small>Popular language for web, AI & more.</small></div>
+      </td>
+    </tr>
+    <tr>
+      <td align="center">
+        <a href="java.html"><img src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg" width="120" alt="Java"></a>
+        <div>Java Programming<br><small>Build apps & enterprise solutions.</small></div>
+      </td>
+      <td align="center">
+        <a href="DSA.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" width="120" alt="DSA"></a>
+        <div>Data Structures & Algorithms<br><small>Essential for coding interviews & logic building.</small></div>
+      </td>
+      <td align="center">
+        <a href="ML.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Machine_learning.svg/320px-Machine_learning.svg.png" width="120" alt="ML"></a>
+        <div>Machine Learning<br><small>Build AI models and predictive systems.</small></div>
+      </td>
+    </tr>
+    <tr>
+      <td align="center">
+        <a href="DataScience.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Data_Science_Icon.png/320px-Data_Science_Icon.png" width="120" alt="Data Science"></a>
+        <div>Data Science<br><small>Analyze data and discover insights.</small></div>
+      </td>
+      <td align="center">
+        <a href="SQLDatabases.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Sql_data_base_with_logo.svg/320px-Sql_data_base_with_logo.svg.png" width="120" alt="SQL"></a>
+        <div>SQL & Databases<br><small>Manage and query data efficiently.</small></div>
+      </td>
+      <td align="center">
+        <a href="AWSBasics.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/320px-Amazon_Web_Services_Logo.svg.png" width="120" alt="AWS"></a>
+        <div>AWS Basics<br><small>Introduction to Amazon's cloud platform.</small></div>
+      </td>
+    </tr>
+    <tr>
+      <td align="center">
+        <a href="DockerContainers.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Docker_%28container_engine%29_logo.svg/320px-Docker_%28container_engine%29_logo.svg.png" width="120" alt="Docker"></a>
+        <div>Docker & Containers<br><small>Package and deploy applications easily.</small></div>
+      </td>
+      <td align="center">
+        <a href="LinuxEssentials.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/320px-Tux.svg.png" width="120" alt="Linux"></a>
+        <div>Linux Essentials<br><small>Basics of using and working in Linux.</small></div>
+      </td>
+      <td align="center">
+        <a href="GitGitHub.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" width="120" alt="Git"></a>
+        <div>Git & GitHub<br><small>Version control and collaboration.</small></div>
+      </td>
+    </tr>
+    <tr>
+      <td align="center">
+        <a href="ProblemSolving.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Chess_piece_-_Knight.JPG/320px-Chess_piece_-_Knight.JPG" width="120" alt="Problem Solving"></a>
+        <div>Problem Solving<br><small>Sharpen logic and coding skills.</small></div>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+</section>
+
+<a href="#" style="display: block; text-align: center; margin: 20px 0;">Back to top ↑</a>
+
+<section class="testimonials">
+  <h2>What Learners Say</h2>
+  <blockquote>"Great courses to kickstart your career!" - Ravi</blockquote>
+  <blockquote>"Simple, free and high-quality content." - Ananya</blockquote>
+</section>
+
+<section class="subscribe">
+  <h2>Stay Updated!</h2>
+  <form>
+    <input type="email" placeholder="Your email">
+    <button type="submit">Subscribe</button>
+  </form>
+</section>
+
+<section class="social-media">
+  <h2>Follow Us</h2>
+  <a href="#"><i class="fab fa-facebook"></i></a>
+  <a href="#"><i class="fab fa-twitter"></i></a>
+  <a href="#"><i class="fab fa-linkedin"></i></a>
+</section>
+
+<hr/>
+
+<footer class="site-footer">
   <h2>Explore Top Courses for CS Students</h2>
 
   <div class="footer-column">
@@ -141,7 +142,7 @@
     <ul>
       <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
       <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
+      <li><a href="Python.html">Python Programming</a></li>
       <li><a href="java.html">Java Programming</a></li>
     </ul>
   </div>
@@ -178,16 +179,11 @@
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ContactUs.html">Contact Us</a></li>
+      <li><a href="Terms.html">Terms of Use</a></li>
+      <li><a href="Privacy.html">Privacy Policy</a></li>
     </ul>
   </div>
 
-  <div class="footer-column">
+  <div class="footer-bottom">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
-</section>
-
-
-</body>
-</html>
+    <span>
