--- a/index.html
+++ b/index.html
@@ -4,39 +4,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Free Online Course - Learn Anything</title>
+  <meta name="description" content="Learn anything for free! Explore high-quality free courses on web development, Python, AWS, data structures and more.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="i.CSS">
 </head>
 <body>
 
 <header>
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="courses.html">Explore Courses</a></button>
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+    </nav>
+  </div>
 </header>
+
 <hr/>
 
-<div>
+<nav class="breadcrumb">
+  <a href="index.html">Home</a> &gt; <span>Featured Free Courses</span>
+</nav>
+
+<section class="hero">
+  <h1>Learn Anything for Free</h1>
+  <p>Start your learning journey with high-quality, free courses</p>
+  <a class="cta-button" href="courses.html">Explore Courses</a>
+</section>
+
+<div class="featured-section">
   <h2>Featured Free Courses</h2>
-  <table>
+  <table class="featured-courses">
     <tr>
       <td>
-        <a href="#">
+        <a href="HTMLandCSS.html">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" alt="HTML & CSS" width="200">
           <h3>HTML & CSS</h3>
         </a>
         <p>Design responsive, modern web pages.</p>
       </td>
       <td>
-        <a href="#">
+        <a href="Python.html">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" alt="Python Programming" width="200">
           <h3>Python Programming</h3>
         </a>
         <p>Versatile language great for web, AI, and scripting.</p>
       </td>
       <td>
-        <a href="#">
+        <a href="DSA.html">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
           <h3>Data Structures & Algorithms</h3>
         </a>
@@ -45,27 +62,54 @@
     </tr>
     <tr>
       <td>
-        <a href="#">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="SQL & Databases" width="200">
+        <a href="SQLDatabases.html">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Sql_data_base_with_logo.svg/320px-Sql_data_base_with_logo.svg.png" alt="SQL & Databases" width="200">
           <h3>SQL & Databases</h3>
         </a>
         <p>Query, store, and manage data effectively.</p>
       </td>
       <td>
-        <a href="#">
+        <a href="GitGitHub.html">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" alt="Git & GitHub" width="200">
           <h3>Git & GitHub</h3>
         </a>
         <p>Version control and collaboration in projects.</p>
       </td>
-      <td></td>
+      <td>
+        <a href="AWSBasics.html">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/320px-Amazon_Web_Services_Logo.svg.png" alt="AWS Basics" width="200">
+          <h3>AWS Basics</h3>
+        </a>
+        <p>Learn the essentials of Amazon Web Services (AWS) to build, deploy, and manage cloud applications with confidence.</p>
+      </td>
     </tr>
   </table>
 </div>
 
+<section class="testimonials">
+  <h2>What Our Learners Say</h2>
+  <blockquote>"This platform helped me learn Python in a month!" - Alex</blockquote>
+  <blockquote>"The free courses are as good as paid ones elsewhere!" - Priya</blockquote>
+</section>
+
+<section class="subscribe">
+  <h2>Stay Updated</h2>
+  <form>
+    <input type="email" placeholder="Your email">
+    <button type="submit">Subscribe</button>
+  </form>
+</section>
+
+<section class="social-media">
+  <h2>Follow Us</h2>
+  <a href="#"><i class="fab fa-facebook"></i></a>
+  <a href="#"><i class="fab fa-twitter"></i></a>
+  <a href="#"><i class="fab fa-linkedin"></i></a>
+</section>
+
 <hr/>
-<section>
-<footer>
+
+<footer class="site-footer">
   <h2>Explore Top Courses for CS Students</h2>
 
   <div class="footer-column">
@@ -73,7 +117,7 @@
     <ul>
       <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
       <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
+      <li><a href="Python.html">Python Programming</a></li>
       <li><a href="java.html">Java Programming</a></li>
     </ul>
   </div>
@@ -110,15 +154,16 @@
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ContactUs.html">Contact Us</a></li>
+      <li><a href="Terms.html">Terms of Use</a></li>
+      <li><a href="Privacy.html">Privacy Policy</a></li>
     </ul>
   </div>
 
-  <div class="footer-column">
+  <div class="footer-bottom">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
 </footer>
-</section>
 
 </body>
 </html>
